Bug 1491400 - Cut off inheritance for dropmarkers within other widgets where -moz-image-region might be set for the primary icon. r=Standard8
Differential Revision: https://phabricator.services.mozilla.com/D7399

UltraBlame original commit: 19165a49129512561ee268e671c9e389b566b489

--- a/toolkit/themes/linux/global/dropmarker.css
+++ b/toolkit/themes/linux/global/dropmarker.css
@@ -4,4 +4,7 @@
 
 dropmarker {
   -moz-appearance: -moz-menulist-button;
+  
+
+  -moz-image-region: auto;
 }
