--- a/toolkit/themes/osx/global/dropmarker.css
+++ b/toolkit/themes/osx/global/dropmarker.css
@@ -5,4 +5,7 @@
 dropmarker {
   -moz-appearance: -moz-menulist-button;
   width: 16px;
+  
+
+  -moz-image-region: auto;
 }
